Use fxml layout instead of hard coding interface